Dealing with overflow issues

--- a/_static/css/pj_touch.css
+++ b/_static/css/pj_touch.css
@@ -819,6 +819,7 @@ SIDEBAR APPEARANCE
     .content {
         max-width: unset;
         width: -webkit-fill-available;
+        overflow: auto;
     }
 
     .nav-toggle-label {
